@@ -80,6 +80,8 @@ enum pmd_stat_type {
     PMD_CYCLES_ITER_IDLE,   /* Cycles spent in idle iterations. */
     PMD_CYCLES_ITER_BUSY,   /* Cycles spent in busy iterations. */
     PMD_CYCLES_UPCALL,      /* Cycles spent processing upcalls. */
+    PMD_SLEEP_ITER,         /* Iterations where a sleep has taken place. */
+    PMD_CYCLES_SLEEP,       /* Total cycles slept to save power. */
     PMD_N_STATS
 };
 
@@ -408,7 +410,8 @@ void
 pmd_perf_start_iteration(struct pmd_perf_stats *s);
 void
 pmd_perf_end_iteration(struct pmd_perf_stats *s, int rx_packets,
-                       int tx_packets, bool full_metrics);
+                       int tx_packets, uint64_t sleep_cycles,
+                       bool full_metrics);
 
 /* Formatting the output of commands. */
 
